--- a/grafana-tempo/tempo.yaml
+++ b/grafana-tempo/tempo.yaml
@@ -5,7 +5,7 @@ stream_over_http_enabled: true
 server:
   http_listen_address: 0.0.0.0
   http_listen_port: 3200
-  log_level: warn
+  log_level: info
 
 distributor:
   ring:
