--- a/grafana-loki/docker-compose.yml
+++ b/grafana-loki/docker-compose.yml
@@ -7,7 +7,10 @@ services:
   loki:
     container_name: loki
     image: grafana/loki:2.9.4
-    command: [ "-config.file=/etc/loki/config.yaml" ]
+    command: [ "-config.expand-env=true", "-config.file=/etc/loki/config.yaml" ]
+    environment:
+      MINIO_ACCESS_KEY: ${GF_LOKI_MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${GF_LOKI_MINIO_SECRET_KEY}
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 60s
