--- a/grafana-loki/loki.yaml
+++ b/grafana-loki/loki.yaml
@@ -32,8 +32,8 @@ common:
       s3forcepathstyle: true
       bucketnames: loki
       endpoint: minio:9000
-      access_key_id: minio
-      secret_access_key: miniopass
+      access_key_id: ${MINIO_ACCESS_KEY}
+      secret_access_key: ${MINIO_SECRET_KEY}
       insecure: true
   replication_factor: 1
   ring:
