--- a/grafana-mimir/mimir.yaml
+++ b/grafana-mimir/mimir.yaml
@@ -63,6 +63,6 @@ common:
     s3:
       endpoint: minio:9000
       bucket_name: mimir
-      access_key_id: minio
-      secret_access_key: miniopass
+      access_key_id: ${MINIO_ACCESS_KEY}
+      secret_access_key: ${MINIO_SECRET_KEY}
       insecure: true
