--- a/grafana-tempo/docker-compose.yml
+++ b/grafana-tempo/docker-compose.yml
@@ -7,7 +7,10 @@ services:
   tempo:
     container_name: tempo
     image: grafana/tempo:2.3.1
-    command: [ "-config.file=/etc/tempo/config.yaml" ]
+    command: [ "-config.expand-env=true", "-config.file=/etc/tempo/config.yaml" ]
+    environment:
+      MINIO_ACCESS_KEY: ${GF_TEMPO_MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${GF_TEMPO_MINIO_SECRET_KEY}
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3200/ready || exit 1" ]
       interval: 60s
