--- a/grafana-tempo/tempo.yaml
+++ b/grafana-tempo/tempo.yaml
@@ -50,8 +50,8 @@ storage:
     s3:
       bucket: tempo
       endpoint: minio:9000
-      access_key: minio
-      secret_key: miniopass
+      access_key: ${MINIO_ACCESS_KEY}
+      secret_key: ${MINIO_SECRET_KEY}
       insecure: true
       forcepathstyle: true
     blocklist_poll: 2s
